--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,8 +1,6 @@
 version: "{build}"
 
-image:
-- Visual Studio 2017
-- Visual Studio 2015
+image: Visual Studio 2017
 
 configuration:
  - Debug
@@ -23,3 +21,8 @@ build:
 
 before_deploy:
  - set
+ - set ZipTag=%APPVEYOR_REPO_TAG_NAME%
+ - if "%APPVEYOR_REPO_TAG_NAME%" == "" set ZipTag=%APPVEYOR_REPO_BRANCH%-%CONFIGURATION%
+ - 7z a %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip %APPVEYOR_BUILD_FOLDER%\Build\%CONFIGURATION%\*.exe
+ - if "%CONFIGURATION%" == "Debug" 7z u %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip %APPVEYOR_BUILD_FOLDER%\Build\%CONFIGURATION%\*.pdb
+ - appveyor PushArtifact %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip
