--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,7 @@ build:
  project: c:\projects\ci-sharp-test\ci-sharp-test.sln
  parallel: true
 
-before_deploy:
+on_success:
  - set
  - set ZipTag=%APPVEYOR_REPO_TAG_NAME%
  - if "%APPVEYOR_REPO_TAG_NAME%" == "" set ZipTag=%APPVEYOR_REPO_BRANCH%-%CONFIGURATION%
