--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,9 +20,12 @@ build:
  parallel: true
 
 on_success:
- - set
- - set ZipTag=%APPVEYOR_REPO_TAG_NAME%
- - if "%APPVEYOR_REPO_TAG_NAME%" == "" set ZipTag=%APPVEYOR_REPO_BRANCH%-%CONFIGURATION%
- - 7z a %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip %APPVEYOR_BUILD_FOLDER%\Build\%CONFIGURATION%\*.exe
- - if "%CONFIGURATION%" == "Debug" 7z u %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip %APPVEYOR_BUILD_FOLDER%\Build\%CONFIGURATION%\*.pdb
- - appveyor PushArtifact %APPVEYOR_PROJECT_NAME%-%ZipTag%.zip
+ - set APP_ZIP_TAG=%APPVEYOR_REPO_TAG_NAME%
+ - if "%APPVEYOR_REPO_TAG_NAME%" == "" set APP_ZIP_TAG=%APPVEYOR_REPO_BRANCH%-%CONFIGURATION%
+ - set APP_ZIP=%APPVEYOR_PROJECT_NAME%-%APP_ZIP_TAG%.zip
+ - 7z a %APP_ZIP% %APPVEYOR_BUILD_FOLDER%\ci-sharp-test\Build\%CONFIGURATION%\ci-sharp-test.exe*
+ - if "%CONFIGURATION%" == "Debug" 7z u %APP_ZIP% %APPVEYOR_BUILD_FOLDER%\ci-sharp-test\Build\%CONFIGURATION%\*.pdb
+ - appveyor PushArtifact %APP_ZIP%
+ - dir
+ - cd \
+ - dir
