--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,7 @@ clone_depth: 50
 install:
  - cd %APPVEYOR_BUILD_FOLDER%
  - git submodule update --init --recursive
+ - nuget restore
 
 build:
  project: c:\projects\ci-sharp-test\ci-sharp-test.sln
